Changes AbstractController.java AbstractService.java AdottanteController.java AdottanteService.java Animale.java AnimaleController.java AnimaleDto.java AnimaleMapper.java AnimaleService.java AuthController.java CentroAdozioneController.java CentroAdozioneService.java VisitaMedicaController.java VisitaMedicaService.java Volontario.java VolontarioController.java VolontarioRepository.java VolontarioService.java workspace.xml Unversioned Files